<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PrivateUniversities</string>
     <string name="title">Private Universities of Bangladesh</string>
    <string name="name">UniversityName</string>
    <string name="addr">Address</string>
    <string name="desc">Description</string>
    <string name="lat">Latitude</string>
    <string name="lngt">Longitude</string>
  
    <string name="courses">Courses Offered</string>
    <string name="save">Save Info</string>
    <string name="teacher">Teacher Number</string>
    <string name="action_settings">Settings</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="textPrivateUniversity">Private University Information</string>
     <string name="textHeaderFirstLine">Ten Private Universities Of Bangladesh</string>
 <string name="btn_text_camera">Take Photo From Gallery</string>
    

    
    <string name="edit">Edit </string>
   <string name="delete">Delete </string>
   
   <string name="deleteName">Are you sure, you want to delete it.</string>

</resources>
